fix: cover writing header on mobile

--- a/src/frontend/styles/components/writing.pcss
+++ b/src/frontend/styles/components/writing.pcss
@@ -3,7 +3,6 @@
   margin-top: calc(-1 * var(--layout-padding-vertical));
   background: #fff;
   box-shadow: 0 3px 10px #fff;
-  z-index: 2;
   font-size: 14px;
 
   &__save {
